--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@opentelemetry/core": "^1.22.0",
     "@opentelemetry/exporter-zipkin": "^1.22.0",
     "@opentelemetry/node": "^0.24.0",
+    "@opentelemetry/plugin-express": "^0.15.0",
     "@opentelemetry/plugin-http": "^0.18.2",
     "@opentelemetry/plugin-https": "^0.18.2",
     "@opentelemetry/tracing": "^0.24.0",
